[package]
name = "minnehack-check-in"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]

[dependencies]
arrayvec = { version = "0.4.6", features = ["serde-1"] }
byteorder = "1.2.1"
clap = "2.29.0"
dotenv = "0.10.1"
error-chain = "0.11.0"
lazy_static = "1.0.0"
log = "0.4.1"
nom = "3.2.1"
pretty_env_logger = "0.1.1"
serde = "1.0.27"
serde_cbor = "0.8.1"
serde_derive = "1.0.27"
sodiumoxide = "0.0.16"
stm = "0.3.0"

[dev-dependencies]
quickcheck = "0.6.0"
