[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
name = "minnehack-check-in"
version = "0.1.0"

[[bin]]
doc = false
name = "minnehack-check-in"
path = "src/main.rs"

[dependencies]
byteorder = "1.2.1"
clap = "2.29.0"
dotenv = "0.10.1"
error-chain = "0.11.0"
lazy_static = "1.0.0"
log = "0.4.1"
nom = "3.2.1"
pretty_env_logger = "0.1.1"
rust-crypto = "0.2.36"
serde = "1.0.27"
serde_cbor = "0.8.1"
serde_derive = "1.0.27"
sha2 = "0.7.0"
stm = "0.3.0"

[dependencies.arrayvec]
features = ["serde-1"]
version = "0.4.6"

[dev-dependencies]
quickcheck = "0.6.0"
